--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>File missing: Cannot find what you are looking for </title>
+    <title> That file is not here </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
 
